# icfp-2024

./: .gitignore  Cargo.toml  README.md  constitution.txt  test_api_token.py
cc/: .clangd  compress.cc  encode.cc  eval.cc  icfp.cc  icfp.h  icfp_test.cc  lambdaman.cc  makefile  pp.cc  solve-spaceships.sh  spaceship-simple.cc  spaceship.cc  take-improvements.cc
cc-lib/: README  TODO  ansi.cc  ansi.h  ansi_test.cc  arcfour.cc  arcfour_bench.cc  array-util.h  atomic-util.cc  atomic-util.h  atomic-util_test.cc  auto-histo.h  autoparallel.h  autoparallel_test.cc  base64.cc  base64.h  base64_test.cc  bitbuffer.cc  bitbuffer.h  bitbuffer_test.cc  bounds.cc  bounds.h  bounds_test.cc  boxes-and-glue.cc  boxes-and-glue.h  boxes-and-glue_test.cc  city_test.cc  color-util.cc  color-util.h  color-util_test.cc  compile_flags.txt  csv.cc  csv.h  csv_test.cc  divbench.cc  do-not-optimize_test.cc  edit-distance.cc  edit-distance.h  edit-distance_test.cc  factorization.cc  (+119 more)
communication/: 3d-interesting.txt  example.json  get-3d.html  get-3d.md  get-efficiency.txt  get-lambdaman.txt  get-spaceship.txt
gui/: .gitignore  Makefile  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
lambdaman-solver/: Cargo.toml
lambdaman-solver/src/: lib.rs  main.rs
puzzles/: README.md
rust/: decode.rs  icfp.rs  test-api-token.rs
rust-utils/: Cargo.toml
seaplusplus/: .gitignore  3v.cpp  Makefile  count-bits-short.3d  count-bits-slow.3d  count-bits-wide-4.3d  count-bits-wide.3d  count-bits.3d  encode.cpp  eval.cpp  evel.cpp  icfp.hpp  make-3d11.js  pretty.cpp  test-3d4.py  (+1 more)
(+275 files in other folders)
