[package]
name = "icfp"
version = "0.1.0"
edition = "2021"


[[bin]]

name = "test-api-token"
path = "rust/test-api-token.rs"

[[bin]]

name = "communicate"
path = "rust/communicate.rs"

[[bin]]

name = "decode"
path = "rust/decode.rs"

[lib]

name = "icfp"
path = "rust/icfp.rs"

[dependencies]

ureq = "2.9.7"
anyhow = "1.0"