[package]
name = "lambdaman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
icfp = { path = "../rust-utils/", version = "*" }

[[bin]]
name = "lambdaman4"

[[bin]]
name = "lambdaman6"


[[bin]]
name = "lambdaman8"

[[bin]]
name = "lambdaman9"

[[bin]]
name = "lambdaman10"


[[bin]]
name = "print_states"
