[package]
name = "lambdaman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
icfp = { path = "../rust-utils/", version = "*" }

[[bin]]
name = "lambdaman4"

[[bin]]
name = "lambdaman5"

[[bin]]
name = "lambdaman6"

[[bin]]
name = "lambdaman7"

[[bin]]
name = "lambdaman8"

[[bin]]
name = "lambdaman9"

[[bin]]
name = "lambdaman10"

[[bin]]
name = "lambdaman11"

[[bin]]
name = "hilbert"

[[bin]]
name = "lambdaman16"

[[bin]]
name = "lambdaman17"

[[bin]]
name = "lambdaman19"

[[bin]]
name = "lambdaman20"

[[bin]]
name = "lambdaman21"

[[bin]]
name = "random_walk"

[[bin]]
name = "print_states"
